# Six-Wheel-Rover-Controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: nav2_params.yaml
launch/: nav2.launch.py  rover.launch.py  slam.launch.py
rover/launch/: rover.launch.py
rover/src/six_wheel_rover/: package.xml  setup.cfg  setup.py
rover/src/six_wheel_rover/config/: six_wheel_rover_controller.yaml
rover/src/six_wheel_rover/launch/: rsp.launch.py
rover/src/six_wheel_rover/model/: camera.xacro  six_wheel_rover.xacro  six_wheel_rover_camera.xacro
rover/src/six_wheel_rover/six_wheel_rover/: controller.py  teleop.py
rover/src/six_wheel_rover/worlds/: rover_world.sdf
rviz/: rover.rviz
scripts/: teleop_key.py
urdf/: rover.xacro
worlds/: mars_terrain.world  rover.world
